terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "default" {
  cidr_block = "172.31.0.0/16"
}

resource "aws_subnet" "psdenedo_public_subnet" {
  vpc_id                  = aws_vpc.default.id
  cidr_block              = "172.31.0.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "psdenedo_igw" {
  vpc_id = aws_vpc.default.id
}

resource "aws_route_table" "psdenedo_rt" {
  vpc_id = aws_vpc.default.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.psdenedo_igw.id
  }

  #subnet_id = aws_subnet.public_subnet.id
}

resource "aws_ecr_repository" "psdenedo_igw" {
  name = "my-ecr-repository"
}

data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
}

resource "aws_instance" "psdenedo_ec2_instance" {
  ami           = data.aws_ami.amazon_linux.id
  instance_type = "t2.micro"

  subnet_id = aws_subnet.psdenedo_public_subnet.id
}

output "ecr_repository_url" {
  value = aws_ecr_repository.psdenedo_igw.repository_url
}
